--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -19,5 +19,26 @@
   .MuiCardMedia-img {
     object-fit: contain;
   }
+  .stats {
+    display: block;
+
+    ul {
+      padding: 0;
+
+      li {
+        list-style: none;
+        display: flex;
+        margin-bottom: 1em;
+        justify-content: space-between;
+        align-items: baseline;
+
+        h6 {
+          font-size: 14px;
+          width: 100%;
+          text-align: center;
+        }
+      }
+    }
+  }
 }
 
