--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -86,7 +86,8 @@
   }
 
   .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input,
-  .css-1dhyhd5-MuiFormLabel-root-MuiInputLabel-root {
+  .css-1dhyhd5-MuiFormLabel-root-MuiInputLabel-root,
+  .MuiFormLabel-root.MuiInputLabel-root {
     color: #d3d3d3;
   }
 
