--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -6,13 +6,13 @@
     margin-top: 60px;
 
     .MuiPaper-root {
-      background: rgba(40, 44, 52, .57);
+      background: rgba(40, 44, 52, 0.57);
       color: #fff;
     }
   }
 
   .topbot {
-    background: rgba(40, 44, 52, .57);
+    background: rgba(40, 44, 52, 0.57);
   }
 
   .centered {
@@ -36,8 +36,9 @@
     border-bottom: 2px solid #d3d3d3;
   }
 
-  .main-menu, .MuiPaper-root.MuiCard-root {
-    background: rgba(40, 44, 52, .57);
+  .main-menu,
+  .MuiPaper-root.MuiCard-root {
+    background: rgba(40, 44, 52, 0.57);
     border-radius: 6px;
     color: #d3d3d3;
   }
@@ -48,9 +49,10 @@
   }
 
   .save .MuiPaper-root {
-    background: rgba(40, 44, 52, .57);
+    background: rgba(40, 44, 52, 0.57);
 
-    .MuiCard-root, > .MuiPaper-root {
+    .MuiCard-root,
+    > .MuiPaper-root {
       background: none;
       box-shadow: none;
     }
@@ -69,6 +71,7 @@
   .main-menu {
     button {
       font-size: 32px;
+      color: #adadad;
     }
   }
 
@@ -133,17 +136,17 @@
     padding: 15px 45px;
   }
 
-  .menu-table  {
+  .menu-table {
     margin-bottom: 40px;
 
     th {
       font-weight: bold;
     }
 
-    th, td {
+    th,
+    td {
       color: #d3d3d3;
       font-size: 16px;
     }
   }
 }
-
